Fixed Project Card Spacing

--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -126,6 +126,7 @@ button{
 //Projects
 
 #projects{
+   
     padding: 30px 0px; 
     background-color: $super_dark_blue;
     color: white;
@@ -135,8 +136,8 @@ button{
 }
 #projects_grid{
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-column-gap: 25px;
+    grid-template-columns: 49% 49%;
+    grid-column-gap: 2%;
     grid-row-gap: 20px;
     div{
         padding: 10px;
@@ -157,6 +158,7 @@ button{
     }
     a{
         color: black;
+        float: right;
         
         &:hover{
             color:$light_blue;}
@@ -273,11 +275,15 @@ button{
 }
     hr{
         float: left;
-        width: 50%;
+        width: 100%;
+        grid-column: 1/3;
     }
     h2{
         font-size: 2em;
         color: $super_dark_blue;
+    }
+    h3{
+        color:$super_dark_blue;
     }
     a{
         color: white;
@@ -311,7 +317,7 @@ button{
     display: grid;
     grid-template-columns: 30% 30%;
     grid-column-gap: 25px;
-    grid-row-gap: 20px;
+    grid-row-gap: 10px;
     #para{
         grid-column: 1/3;
     }
@@ -384,7 +390,7 @@ footer{
             height: 70px;
             width: 70px;
         }
-        //About Me Section
+
 
     }
   }
